third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/typing/implicit_deref_borrow_field_chain.exp
module 0x8675309::M {
    struct X1 {
        x2: X2,
    }
    struct X2 {
        x3: X3,
    }
    struct X3 {
        f: u64,
    }
    fun t0(x1: &X1, x1_mut: &mut X1, x2: &X2, x2_mut: &mut X2) {
        *&&&x1.x2.x3.f;
        *&&&x1_mut.x2.x3.f;
        *&&x2.x3.f;
        *&&x2_mut.x3.f;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
   ┌─ implicit_deref_borrow_field_chain.move:12:10
   │
12 │         *&&&x1.x2.x3.f;
   │          ^^
   │          │
   │          Unexpected '&&'
   │          Expected an expression term
